# krita-xsimd-vc-boost-showdown

./: CMakeLists.txt  LICENSE  main.cpp  vc_extra_math.h  xsimd_extra_math.h
